--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/org.mozilla.javascript.jar" sourcepath="/Rhino/src"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/sqljet.1.0.3.b914.jar" sourcepath="/SQLiteTest/lib/sqljet.1.0.3.b914.src.zip"/>
+	<classpathentry kind="lib" path="lib/sqljet.1.0.3.b914.jar" sourcepath="/sqljet/src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
