--- a/.classpath
+++ b/.classpath
@@ -4,7 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="lib/sqljet.1.0.3.b914.jar" sourcepath="/sqljet/src"/>
+	<classpathentry kind="lib" path="lib/sqljet.1.0.3.b914.jar" sourcepath="C:/bin/Downloads/sqljet.1.0.4.b963/sqljet.1.0.4.b963.src.zip"/>
 	<classpathentry kind="lib" path="lib/js.jar" sourcepath="C:/bin/Downloads/rhino1_7R2.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
