--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="lib/sqljet.1.0.3.b914.jar" sourcepath="C:/bin/Downloads/sqljet.1.0.4.b963/sqljet.1.0.4.b963.src.zip"/>
-	<classpathentry kind="lib" path="lib/js.jar" sourcepath="C:/bin/Downloads/rhino1_7R2.zip"/>
+	<classpathentry kind="lib" path="lib/js.jar" sourcepath="/Rhino"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
