--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,11 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="lib/sqljet.1.0.3.b914.jar" sourcepath="C:/bin/Downloads/sqljet.1.0.4.b963/sqljet.1.0.4.b963.src.zip"/>
-	<classpathentry kind="lib" path="lib/js.jar" sourcepath="/Rhino"/>
 	<classpathentry kind="lib" path="lib/mail.jar"/>
 	<classpathentry kind="lib" path="lib/bnd.jar"/>
 	<classpathentry kind="lib" path="lib/dnsjava-2.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ldap.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
+	<classpathentry kind="lib" path="lib/rhino_patched.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
