--- a/.classpath
+++ b/.classpath
@@ -9,7 +9,7 @@
 	<classpathentry kind="lib" path="lib/dnsjava-2.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/ldap.jar"/>
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
-	<classpathentry kind="lib" path="lib/rhino_patched.jar"/>
+	<classpathentry kind="lib" path="lib/rhino_patched.jar" sourcepath="/Rhino_debug"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
