--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="lib" path="lib/antlr-runtime-3.1.3.jar"/>
 	<classpathentry kind="lib" path="lib/rhino_patched.jar" sourcepath="/Rhino_debug"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/jsonic-1.2.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
