--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="lib" path="lib/jsonic-1.2.7.jar" sourcepath="C:/Users/shinya/Dropbox/Downloads/jsonic-1.2.7.zip"/>
 	<classpathentry kind="lib" path="lib/jetty-xml-7.2.0.v20101020.jar"/>
 	<classpathentry kind="lib" path="lib/jruby.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
